@@ -3812,3 +3812,23 @@ SEXP R_igraph_pagerank(SEXP graph, SEXP pvids, SEXP pdirected,
   return result;
 }
   
+SEXP R_igraph_reciprocity(SEXP graph, SEXP pignore_loops) {
+  
+  igraph_t g;
+  igraph_bool_t ignore_loops=LOGICAL(pignore_loops)[0];
+  igraph_real_t res;
+  SEXP result;
+  
+  R_igraph_before();
+  
+  R_SEXP_to_igraph(graph, &g);
+  igraph_reciprocity(&g, &res, ignore_loops);
+  PROTECT(result=NEW_NUMERIC(1));
+  REAL(result)[0]=res;
+  
+  R_igraph_after();
+  
+  UNPROTECT(1);
+  return result;
+}
+  
